fix align close and icon

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -40,10 +40,10 @@ body, div, .row {
 
 .inner-wrap {
    -webkit-transition-duration: 200ms;
-   transition-duration: 200ms; 
+   transition-duration: 200ms;
   -webkit-transition-delay: 0;
   transition-delay: 0;
-} 
+}
 
 body {
   overflow: hidden;
@@ -109,11 +109,15 @@ _:-ms-fullscreen, :root .main {
 
 .left-small {
   width: 4.7rem;
+  line-height: 2.95rem;
+  border-right: none;
 }
 
 .right-small {
   width: 4.7rem;
   text-align: right;
+  line-height: 2.7rem;
+  border-left: none;
 }
 
 .tab-bar .icon-back {
@@ -135,6 +139,7 @@ _:-ms-fullscreen, :root .main {
 .tab-bar .text-close {
   font-size: 1rem;
   font-weight: 400;
+  line-height: 2.95rem;
 }
 
 .bottom-bar {
@@ -229,13 +234,7 @@ ul.copayer-list img {
   background-color: #213140;
 }
 
-.left-small {
-  border-right: none;
-}
 
-.right-small {
-  border-left: none;
-}
 
 .right-small a, .left-small a {
   color: #A5B2BF;
@@ -568,39 +567,39 @@ a.pin-button:active {
 .reveal-modal,
 .reveal-modal .fade,
 .reveal-modal .fade .out,
-.reveal-modal .fade .in, 
+.reveal-modal .fade .in,
 .reveal-modal.fade.full.in,
 .reveal-modal.fade.full.out,
 .reveal-modal.fade.full,
-input[type="color"], 
-input[type="date"], 
-input[type="datetime-local"], 
-input[type="datetime"], 
-input[type="email"], 
-input[type="month"], 
-input[type="number"], 
-input[type="password"], 
-input[type="search"], 
-input[type="tel"], 
-input[type="text"], 
-input[type="time"], 
-input[type="url"], 
-input[type="week"], 
+input[type="color"],
+input[type="date"],
+input[type="datetime-local"],
+input[type="datetime"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
 textarea,
-input[type="text"]:focus, 
-input[type="password"]:focus, 
-input[type="date"]:focus, 
-input[type="datetime"]:focus, 
-input[type="datetime-local"]:focus, 
-input[type="month"]:focus, 
-input[type="week"]:focus, 
-input[type="email"]:focus, 
-input[type="number"]:focus, 
-input[type="search"]:focus, 
-input[type="tel"]:focus, 
-input[type="time"]:focus, 
-input[type="url"]:focus, 
-input[type="color"]:focus, 
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="date"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="month"]:focus,
+input[type="week"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="time"]:focus,
+input[type="url"]:focus,
+input[type="color"]:focus,
 textarea:focus
 {
   opacity: 1;
@@ -692,10 +691,10 @@ textarea:focus
 }
 
 .animation-left, .animation-right {
-  position: absolute; 
-  background: #fff; 
-  display: block; 
-  width: 100%; 
+  position: absolute;
+  background: #fff;
+  display: block;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
@@ -776,5 +775,3 @@ textarea:focus
 /* removes 300ms in IE */
 -ms-touch-action: manipulation; /* IE10 /
 touch-action: manipulation; /* IE11+ */
-
-
